--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -5,16 +5,42 @@ events {
 
 http {
     server {
+	include /etc/nginx/mime.types;
         listen      80 default_server;
 
         root /usr/share/nginx/html;
 
         index index.html index.htm index.nginx-debian.html;
 
+	location ~ /.well-know/acme-challenge {
+            allow all;
+            root /usr/share/nginx/html/letsencrypt;
+        }
+
+        location / {
+#            try_files $uri /index.html;
+             return 301 https://dev-release.com;
+        }
+
+        location /api {
+            rewrite /api/(.*) /$1 break;
+            proxy_pass http://server:4000;
+        }
+    }
+
+    server {
+	include /etc/nginx/mime.types;
+        listen 443 ssl http2;
+	root /usr/share/nginx/html;
+        index index.html;
+	server_name dev-release.com;
+        ssl_certificate cert.pem;
+        ssl_certificate_key privkey.pem;
+   
         location / {
             try_files $uri /index.html;
         }
-        
+
         location /api {
             rewrite /api/(.*) /$1 break;
             proxy_pass http://server:4000;
