--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -29,6 +29,15 @@ http {
     }
 
     server {
+	gzip on;
+        gzip_static on;    
+        gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_proxied  any;
+        gzip_vary on;
+        gzip_comp_level 6;
+        gzip_buffers 16 8k;
+        gzip_http_version 1.1;  
+
 	include /etc/nginx/mime.types;
         listen 443 ssl http2;
 	root /usr/share/nginx/html;
