--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
-
+.DS_Store
+node_modules
+/dist
 ## Server
 
 # dependencies
 /server/node_modules
-
+/tests/e2e/videos/
+/tests/e2e/screenshots/
 # Logs
 /server/logs/*
 
@@ -24,12 +27,25 @@
 
 # misc
 .DS_Store
+# local env files
 .env.local
+.env.*.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 client/*.pem
+nginx/*.pem
