--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "board-server",
+  "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint --fix src/**",
-    "test": "jest",
-    "start": "node src/server.js",
-    "server": "nodemon src/server.js",
-    "client": "npm run serve --prefix ../client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "start": "node src/server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "concurrently": "^3.6.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
