--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
   repository_dispatch:
     types: do-something
   schedule:
-    - cron:  '* * * * * *'
+    - cron:  '*/1 * * * *'
 
 jobs:
   build:
